CHANGES-1.4.txt
---------------

CHANGES IN CUPS V1.4.2

	- The scheduler did not always rebuild printer cache files when the
	  driver was changed (STR #3356)
	- The documentation makefile failed to install localizations when using
	  newer versions of Bash (STR #3360)
	- The configure script did not use the --with-xinetd value for the
	  default LPD configuration path (STR #3347)
	- The configure script incorrectly required glib for DBUS support
	  (STR #3346)
	- The cupstestppd program incorrectly reported filters with bad
	  permisssions as missing (STR #3363)
	- The Russian web interface templates had errors (STR #3359)
	- The cups.desktop file used the wrong locale names (STR #3358)
	- cupsSideChannelRead() did not return an error for short reads.
	- The installed PAM configuration file did not use the correct options
	  with the pam_unix2 module (STR #3313)
	- The scheduler did not preserve default options that contained special
	  characters (STR #3340)
	- The scheduler did not remove old pre-filters when updating a printer
	  driver (STR #3342)
	- The HP/GL-2 filter did not check for early end-of-file (STR #3319)
	- The USB backend did not compile on some platforms (STR #3332)
	- cupsSideChannelSNMPWalk() could go into an infinite loop with broken
	  SNMP implementations.


CHANGES IN CUPS V1.4.1

	- Documention fixes (STR #3296)
	- SNMP supply levels and states were wrong for some printers.
	- The IPP backend did not update the auth-info-required value.
	- The libusb-based USB backend would hang at the end of the job
	  (STR #3315, STR #3318)
	- DNS-SD registrations for raw queues had an empty "ty" key (STR #3299)
	- The JPEG and BMP MIME type rules were broken (STR #3284)
	- cupsGetNamedDest returned the default printer when the named
	  destination did not exist (STR #3285)
	- The JobKillDelay was not triggered for canceled jobs (STR #3292)
	- The PPD compiler could get in an infinite loop (STR #3293)