@@ -21,8 +21,8 @@ and can be modified using your favorite text editor, you should
 normally use the <A HREF="man-lpadmin.html">lpadmin(8)</A>
 command, web interface, or any of the available GUIs to manage
 your printers instead. If you do choose to edit this file
-manually, you will need to restart the scheduler to make them
-active.</P>
+manually, you will need to stop the scheduler first, make your
+changes, and then start the scheduler to make them active.</P>
 
 
 <H2 CLASS="title"><A NAME="Accepting">Accepting</A></H2>
